# cryocalc

./: .gitignore  .gitmodules  BUILD.gn  CryoCalc.sln  CryoCalc.vcxproj  CryoCalc.vcxproj.filters  LICENSE.md  Makefile  README.md  TODO.md  cryocalc.iss  osinfo.def
assets/: Readme.txt
osinfo/: os_info.cc  os_info.h  os_info_dll.h  osinfo.def  version.h
src/: constants.h  controls.cc  controls.h  converters.cc  converters.h  cryocalc.cc  cryocalc.h  framework.h  globals.h  osinfo.cc  osinfo.h  resource.h  resource.rc  utils.cc  utils.h  version.h
src/osinfo/: export.h  os_info.h  resource.rc  stdafx.h  version.h
