# Copyright 2025 Alex313031

group("cryocalc_all") {
  public_deps = [
    ":cryocalc",
    "osinfo:osinfo_dll",
  ]
}

executable("cryocalc") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":cryocalc_config",
  ]
  sources = [
    "src/constants.h",
    "src/controls.cc",
    "src/controls.h",
    "src/converters.cc",
    "src/converters.h",
    "src/cryocalc.cc",
    "src/cryocalc.h",
    "src/framework.h",
    "src/globals.h",
    "src/resource.h",
    "src/resource.rc",
    "src/utils.cc",
    "src/utils.h",
    "src/version.h",
  ]
  deps = [
    "osinfo:osinfo",
  ]
  public_deps = [
    "osinfo:osinfo_dll",
  ]
}

config("cryocalc_config") {
  include_dirs = [
    "src",
    "osinfo",
  ]
}
